curso-kubernetes/modulo-11-ingress/pratica/app1.yaml
# App 1 — vai responder no host app1.local.test
# Usamos hashicorp/http-echo: container leve que devolve uma string fixa.
# Ótimo pra ver visualmente qual app respondeu.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo:1.0
        args:
        - "-text=Bem-vindo ao APP 1 🟦"
        - "-listen=:5678"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app: app1
  ports:
  - port: 80          # porta interna do Service
    targetPort: 5678  # porta do container
